--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -27,7 +27,9 @@
   <mat-sidenav #sidenav mode="side" [class.mat-elevation-z4]="true" class="app-sidenav" [opened]="isSidenavOpened">
       <mat-nav-list>
           <mat-list-item routerLink="/" (click)="onDashboard()">
-              <span>Dashboard</span>
+            <div class="dashboard-btn">
+                <mat-icon aria-hidden="false" aria-label="dashboard icon" fontIcon="dashboard"></mat-icon><span>Dashboard</span>
+            </div>
           </mat-list-item>
           <ng-container *ngFor="let item of menu">
             <mat-expansion-panel [class.mat-elevation-z0]="true" expanded="true">
