--- a/src/app/fibre/fibre-receive-purchase-order/fibre-receive-purchase-order.component.scss
+++ b/src/app/fibre/fibre-receive-purchase-order/fibre-receive-purchase-order.component.scss
@@ -10,8 +10,10 @@
     padding: 32px;
     display: flex;
     gap: 48px;
+    flex-wrap: wrap;
     align-items: center;
 }
+
 
 h1 {
     margin: 48px 0;
