--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,6 +9,10 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     padding: 0 32px;
 }
 
+.ml-16 {
+    margin-left: 16px;
+}
+
 
 
 // Font size
@@ -20,4 +24,9 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .font-size-14 {
     font-size: 14px;
 }
+
+.font-size-22 {
+    font-size: 22px;
+}
+
 
