Added menu header

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -3,7 +3,7 @@
         <mat-icon *ngIf="isSidenavOpened">close</mat-icon>
         <mat-icon *ngIf="!isSidenavOpened">menu</mat-icon>
     </button>
-    <span class="ml-16 font-size-22">[Company Name]</span>
+    <span class="ml-8 font-size-20">Menu</span>
     <div class="nav-btn py-32">
       <button id="purchases" mat-button (click)="selectSection('purchases')">Purchases</button>
       <button id="production" mat-button (click)="selectSection('production')">Production</button>
