--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,10 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 }
 
 .ml-16 {
+    margin-left: 8px;
+}
+
+.ml-16 {
     margin-left: 16px;
 }
 
@@ -25,8 +29,8 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     font-size: 14px;
 }
 
-.font-size-22 {
-    font-size: 22px;
+.font-size-20 {
+    font-size: 20px;
 }
 
 
