Added header in purchases

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,7 +17,15 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     margin-left: 16px;
 }
 
+.mb-24 {
+    margin-bottom: 24px;
+}
 
+// font weight
+
+.font-weight-bold {
+    font-weight: 500;
+}
 
 // Font size
 
