--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -27,11 +27,13 @@
 <mat-sidenav-container class="app-container">
   <mat-sidenav #sidenav mode="side" [class.mat-elevation-z4]="true" class="app-sidenav" [opened]="isSidenavOpened">
       <mat-nav-list>
-          <mat-list-item routerLink="/" (click)="onDashboard()">
+          <h3 mat-subheader>Home</h3>
+          <mat-list-item class="mb-24" routerLink="/" (click)="onDashboard()">
             <div class="dashboard-btn">
-                <mat-icon aria-hidden="false" aria-label="dashboard icon" fontIcon="dashboard"></mat-icon><span>Dashboard</span>
+                <mat-icon aria-hidden="false" aria-label="dashboard icon" fontIcon="dashboard"></mat-icon><span class="font-weight-bold">Dashboard</span>
             </div>
           </mat-list-item>
+          <h3 *ngIf="menu?.length" mat-subheader>Navigation</h3>
           <ng-container *ngFor="let item of menu">
             <mat-expansion-panel [class.mat-elevation-z0]="true" expanded="true">
                 <mat-expansion-panel-header>
