--- a/src/app/purchases/purchases.component.html
+++ b/src/app/purchases/purchases.component.html
@@ -1,3 +1,6 @@
 <div class="container">
-   <div class="header"> <h1>Purchases</h1></div>
+   <div class="header">
+      <div class="shopping-cart"></div>
+      <h1>Purchases</h1>
+   </div>
 </div>
