--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,6 +27,10 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     font-weight: 500;
 }
 
+.font-weight-normal {
+    font-weight: normal;
+}
+
 // Font size
 
 .font-size-16 {
