--- a/src/app/purchases/fibre/fibre-receive-purchase-order/fibre-receive-purchase-order.component.html
+++ b/src/app/purchases/fibre/fibre-receive-purchase-order/fibre-receive-purchase-order.component.html
@@ -6,7 +6,7 @@
       </mat-card-header>
         <mat-card-content>
             <form class="form-container" [formGroup]="form">
-                <mat-form-field hintLabel="Auto-generated" appearance="fill">
+                <mat-form-field appearance="fill">
                   <mat-label>PONo</mat-label>
                   <input matInput formControlName="poNo">
                 </mat-form-field>
@@ -148,21 +148,21 @@
               <mat-list-item>
                 <div class="summary-content">
                   <span>Total amount before tax</span>
-                  <span>{{ '120000' | currency:'INR' }}</span>
+                  <span>{{ orderDetails?.amount | currency:'INR' }}</span>
                 </div>
               </mat-list-item>
               <mat-divider></mat-divider>
               <mat-list-item>
                 <div class="summary-content">
                   <span>Tax amount</span>
-                  <span>{{ '20000' | currency:'INR' }}</span>
+                  <span>{{ ((orderDetails?.amount * orderDetails?.gst) / 100) | currency:'INR' }}</span>
                 </div>
               </mat-list-item>
               <mat-divider></mat-divider>
               <mat-list-item>
                 <div class="summary-content">
                   <span>Total amount after tax</span>
-                  <span>{{ '100000' | currency:'INR' }}</span>
+                  <span>{{ (orderDetails?.amount - ((orderDetails?.amount * orderDetails?.gst) / 100)) | currency:'INR' }}</span>
                 </div>
               </mat-list-item>
             </mat-list>
