--- a/src/app/purchases/fibre/fibre-receive-purchase-order/receive-order-details/receive-order-details.component.html
+++ b/src/app/purchases/fibre/fibre-receive-purchase-order/receive-order-details/receive-order-details.component.html
@@ -46,21 +46,24 @@
                 <mat-error>This field is required.</mat-error>
             </mat-form-field>
             <mat-form-field appearance="fill">
+                <span matPrefix>&nbsp;&#x20B9;&nbsp;</span>
                 <mat-label>Rate</mat-label>
-                <input type="number" matInput formControlName="rate">
+                <input type="number" min="0.00" step=".01" matInput formControlName="rate">
                 <mat-error>This field is required.</mat-error>
             </mat-form-field>
             <mat-form-field appearance="fill">
+                <span matPrefix>&nbsp;&#x20B9;&nbsp;</span>
                 <mat-label>Amount</mat-label>
-                <input type="number" min="0.00" step="0.01" matInput formControlName="amount">
+                <input type="number" min="0.00" step=".01" matInput formControlName="amount">
                 <mat-error>This field is required.</mat-error>
             </mat-form-field>
         </div>
         <div class="flex-container">
             <mat-form-field appearance="fill">
                 <mat-label>GST%</mat-label>
-                <input type="number" min="1" max="100" matInput formControlName="gst">
-                <mat-error>This field is required.</mat-error>
+                <input type="number" max="100" matInput formControlName="gst">
+                <mat-error *ngIf="form.get('gst')?.hasError('required')">This field is required.</mat-error>
+                <mat-error *ngIf="form.get('gst')?.hasError('max')">Value should be between 1 and 100</mat-error>
             </mat-form-field>
             <mat-form-field appearance="fill">
                 <mat-label>Total Amount</mat-label>
