--- a/src/app/reset-password/reset-password.component.html
+++ b/src/app/reset-password/reset-password.component.html
@@ -8,7 +8,7 @@
                 <mat-form-field>
                     <mat-label>Enter New password</mat-label>
                     <input matInput type="password" formControlName="password">
-                    <mat-hint>Password should have length 8</mat-hint>
+                    <mat-hint>Password should have length - 8</mat-hint>
                     <mat-error *ngIf="password?.hasError('required')">This is a required field.</mat-error>
                     <mat-error *ngIf="confirmPassword?.hasError('minlength')">Please enter valid password.</mat-error>
                 </mat-form-field>
