--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar color="primary">
     <button mat-icon-button (click)="toggleSidenav()" matTooltip="Menu">
-        <mat-icon *ngIf="isSidenavOpened">close</mat-icon>
-        <mat-icon *ngIf="!isSidenavOpened">menu</mat-icon>
+        <mat-icon *ngIf="navigationService.isSidenavOpened">close</mat-icon>
+        <mat-icon *ngIf="!navigationService.isSidenavOpened">menu</mat-icon>
     </button>
     <span class="ml-8 font-size-20">Menu</span>
     <div class="nav-btn py-32">
@@ -15,7 +15,7 @@
         <mat-icon>account_circle</mat-icon>
     </button>
     <mat-menu #userAccountMenu [overlapTrigger]="false" yPosition="below">
-        <button mat-menu-item routerLink="/reset-password" (click)="onResetPassword()">
+        <button mat-menu-item routerLink="/reset-password" (click)="navigationService.removeFocus()">
             <mat-icon>person</mat-icon><span>Reset password</span>
         </button>
         <mat-divider></mat-divider>
@@ -26,23 +26,24 @@
 </mat-toolbar>
   
 <mat-sidenav-container class="app-container">
-  <mat-sidenav #sidenav mode="side" [class.mat-elevation-z4]="true" class="app-sidenav" [opened]="isSidenavOpened">
+  <mat-sidenav #sidenav mode="side" [class.mat-elevation-z4]="true" class="app-sidenav" [opened]="navigationService.isSidenavOpened">
       <mat-nav-list>
           <h3 mat-subheader>Home</h3>
           <mat-list-item class="mb-24" routerLink="/" (click)="onDashboard()">
             <div class="dashboard-btn">
-                <mat-icon aria-hidden="false" aria-label="dashboard icon" fontIcon="dashboard"></mat-icon><span class="font-weight-bold">Dashboard</span>
+                <mat-icon aria-hidden="false" aria-label="dashboard icon" fontIcon="dashboard"></mat-icon>
+                <span class="font-weight-bold">Dashboard</span>
             </div>
           </mat-list-item>
-          <h3 *ngIf="menu?.length" mat-subheader>Navigation</h3>
-          <ng-container *ngFor="let item of menu">
+          <h3 *ngIf="navigationService.menu?.length" mat-subheader>Navigation</h3>
+          <ng-container *ngFor="let item of navigationService.menu">
             <mat-expansion-panel [class.mat-elevation-z0]="true" expanded="true">
                 <mat-expansion-panel-header>
                    <span class="font-size-16"> {{ item?.title }}</span>
                 </mat-expansion-panel-header>
                   <mat-nav-list>
                       <ng-container *ngFor="let submenu of item?.submenu">
-                          <a mat-list-item href="javascript:void(0)" (click)="routeTo(submenu.route)" >
+                          <a mat-list-item [routerLink]="submenu.route">
                               <span class="font-size-14">{{ submenu.title }}</span>
                           </a>
                       </ng-container>
