--- a/src/app/notification-snackbar/notification-snackbar.component.scss
+++ b/src/app/notification-snackbar/notification-snackbar.component.scss
@@ -3,3 +3,15 @@
     gap: 8px;
     align-items: center;
 }
+
+.error {
+    color: #f67269;
+}
+
+.warn {
+    color: #f8f83f;
+}
+
+.success {
+    color: #9acd32;
+}
