--- a/src/app/reset-password/reset-password.component.html
+++ b/src/app/reset-password/reset-password.component.html
@@ -19,8 +19,9 @@
                     <mat-error *ngIf="confirmPassword?.hasError('required')">This is a required field.</mat-error>
                 </mat-form-field>
                 
-                <mat-error *ngIf="!confirmPassword?.hasError('required') && form.hasError('passwordNotMatch')">
-                    Confirm new password should be same as new password!
+                <mat-error class="password-error" *ngIf="!confirmPassword?.hasError('required') && form.hasError('passwordNotMatch')">
+                    <mat-icon aria-label="error icon">error</mat-icon>
+                    <span>Confirm new password should be same as new password!</span>
                 </mat-error>
             </form>
         </mat-card-content>
