--- a/src/app/reset-password/reset-password.component.scss
+++ b/src/app/reset-password/reset-password.component.scss
@@ -21,3 +21,9 @@ mat-card-actions {
     display: flex;
     justify-content: center;
 }
+
+.password-error {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
