--- a/src/app/purchases/fibre/fibre-purchase-order/order-details-dialog/order-details-dialog.component.html
+++ b/src/app/purchases/fibre/fibre-purchase-order/order-details-dialog/order-details-dialog.component.html
@@ -12,15 +12,15 @@
                 <mat-error>This field is required.</mat-error>
               </mat-form-field>
             <mat-form-field appearance="fill">
-                <mat-label>KGs</mat-label>
-                <input type="number" matInput formControlName="kgs">
+                <mat-label>Shade Name</mat-label>
+                <input type="text" matInput formControlName="shadeName">
                 <mat-error>This field is required.</mat-error>
             </mat-form-field>
         </div>
         <div class="flex-container">
             <mat-form-field appearance="fill">
-                <mat-label>Bales</mat-label>
-                <input type="number" matInput formControlName="bales">
+                <mat-label>KGS</mat-label>
+                <input type="number" matInput formControlName="kgs">
                 <mat-error>This field is required.</mat-error>
             </mat-form-field>
             <mat-form-field appearance="fill">
