--- a/src/app/purchases/fibre/fibre-purchase-order/fibre-purchase-order.component.html
+++ b/src/app/purchases/fibre/fibre-purchase-order/fibre-purchase-order.component.html
@@ -67,37 +67,37 @@
 
       <ng-container matColumnDef="fibre">
         <th mat-header-cell *matHeaderCellDef>Fibre</th>
-        <td mat-cell *matCellDef="let element">{{element.fibre}}</td>
+        <td mat-cell *matCellDef="let element">{{ element.fibre }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="shadeName">
+        <th mat-header-cell *matHeaderCellDef>Shade Name</th>
+        <td mat-cell *matCellDef="let element">{{ element.shadeName }}</td>
       </ng-container>
 
       <ng-container matColumnDef="kgs">
         <th mat-header-cell *matHeaderCellDef>KGs</th>
-        <td mat-cell *matCellDef="let element">{{element.kgs}}</td>
-      </ng-container>
-    
-      <ng-container matColumnDef="bales">
-        <th mat-header-cell *matHeaderCellDef>Bales</th>
-        <td mat-cell *matCellDef="let element">{{element.bales}}</td>
+        <td mat-cell *matCellDef="let element">{{ element.kgs }}</td>
       </ng-container>
     
       <ng-container matColumnDef="rate">
         <th mat-header-cell *matHeaderCellDef>Rate</th>
-        <td mat-cell *matCellDef="let element">{{element.rate}}</td>
+        <td mat-cell *matCellDef="let element">{{ element.rate | currency:'INR' }}</td>
       </ng-container>
     
       <ng-container matColumnDef="amount">
         <th mat-header-cell *matHeaderCellDef>Amount</th>
-        <td mat-cell *matCellDef="let element">{{element.amount}}</td>
+        <td mat-cell *matCellDef="let element">{{ element.amount | currency:'INR' }}</td>
       </ng-container>
 
       <ng-container matColumnDef="gst">
         <th mat-header-cell *matHeaderCellDef>GST%</th>
-        <td mat-cell *matCellDef="let element">{{element.gst}}</td>
+        <td mat-cell *matCellDef="let element">{{ element.gst | number: '1.2-2' }}%</td>
       </ng-container>
 
       <ng-container matColumnDef="totalAmount">
         <th mat-header-cell *matHeaderCellDef>Total Amount</th>
-        <td mat-cell *matCellDef="let element">{{element.totalAmount}}</td>
+        <td mat-cell *matCellDef="let element">{{ element.totalAmount | currency:'INR' }}</td>
       </ng-container>
     
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
