--- a/src/app/purchases/fibre/fibre-receive-purchase-order/fibre-receive-purchase-order.component.html
+++ b/src/app/purchases/fibre/fibre-receive-purchase-order/fibre-receive-purchase-order.component.html
@@ -82,63 +82,62 @@
   
         <ng-container matColumnDef="fibre">
           <th mat-header-cell *matHeaderCellDef>Fibre</th>
-          <td mat-cell *matCellDef="let element">{{element.fibre}}</td>
+          <td mat-cell *matCellDef="let element">{{ element.fibre }}</td>
         </ng-container>
   
         <ng-container matColumnDef="hsnCode">
           <th mat-header-cell *matHeaderCellDef>HSN Code</th>
-          <td mat-cell *matCellDef="let element">{{element.hsnCode}}</td>
+          <td mat-cell *matCellDef="let element">{{ element.hsnCode }}</td>
         </ng-container>
 
         <ng-container matColumnDef="orderQty">
             <th mat-header-cell *matHeaderCellDef>Order Qty</th>
-            <td mat-cell *matCellDef="let element">{{element.orderQty}}</td>
+            <td mat-cell *matCellDef="let element">{{ element.orderQty }}</td>
           </ng-container>
 
           <ng-container matColumnDef="pendingQty">
             <th mat-header-cell *matHeaderCellDef>Pending Qty</th>
-            <td mat-cell *matCellDef="let element">{{element.pendingQty}}</td>
+            <td mat-cell *matCellDef="let element">{{ element.pendingQty }}</td>
           </ng-container>
 
           <ng-container matColumnDef="receivedQty">
             <th mat-header-cell *matHeaderCellDef>Received Qty</th>
-            <td mat-cell *matCellDef="let element">{{element.receivedQty}}</td>
+            <td mat-cell *matCellDef="let element">{{ element.receivedQty }}</td>
           </ng-container>
 
           <ng-container matColumnDef="receivedBales">
             <th mat-header-cell *matHeaderCellDef>Received Bales</th>
-            <td mat-cell *matCellDef="let element">{{element.receivedBales}}</td>
+            <td mat-cell *matCellDef="let element">{{ element.receivedBales }}</td>
           </ng-container>
       
         <ng-container matColumnDef="lot">
           <th mat-header-cell *matHeaderCellDef>Lot</th>
-          <td mat-cell *matCellDef="let element">{{element.lot}}</td>
+          <td mat-cell *matCellDef="let element">{{ element.lot }}</td>
         </ng-container>
       
         <ng-container matColumnDef="rate">
           <th mat-header-cell *matHeaderCellDef>Rate</th>
-          <td mat-cell *matCellDef="let element">{{element.rate}}</td>
+          <td mat-cell *matCellDef="let element">{{ element.rate | currency:'INR' }}</td>
         </ng-container>
       
         <ng-container matColumnDef="amount">
           <th mat-header-cell *matHeaderCellDef>Amount</th>
-          <td mat-cell *matCellDef="let element">{{element.amount}}</td>
+          <td mat-cell *matCellDef="let element">{{ element.amount | currency:'INR' }}</td>
         </ng-container>
   
         <ng-container matColumnDef="gst">
           <th mat-header-cell *matHeaderCellDef>GST%</th>
-          <td mat-cell *matCellDef="let element">{{element.gst}}</td>
+          <td mat-cell *matCellDef="let element">{{ element.gst | number: '1.2-2' }}%</td>
         </ng-container>
   
         <ng-container matColumnDef="totalAmount">
           <th mat-header-cell *matHeaderCellDef>Total Amount</th>
-          <td mat-cell *matCellDef="let element">{{element.totalAmount}}</td>
+          <td mat-cell *matCellDef="let element">{{ element.totalAmount | currency:'INR' }}</td>
         </ng-container>
       
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
       </table>
-  
       <mat-card class="summary-card" *ngIf="dataSource.length">
         <mat-card-header>
           <mat-card-title>Summary</mat-card-title>
@@ -148,21 +147,21 @@
               <mat-list-item>
                 <div class="summary-content">
                   <span>Total amount before tax</span>
-                  <span>{{ orderDetails?.amount | currency:'INR' }}</span>
+                  <span>{{ amountBeforeTax | currency:'INR' }}</span>
                 </div>
               </mat-list-item>
               <mat-divider></mat-divider>
               <mat-list-item>
                 <div class="summary-content">
                   <span>Tax amount</span>
-                  <span>{{ ((orderDetails?.amount * orderDetails?.gst) / 100) | currency:'INR' }}</span>
+                  <span>{{ taxAmount | currency:'INR' }}</span>
                 </div>
               </mat-list-item>
               <mat-divider></mat-divider>
               <mat-list-item>
                 <div class="summary-content">
                   <span>Total amount after tax</span>
-                  <span>{{ (orderDetails?.amount - ((orderDetails?.amount * orderDetails?.gst) / 100)) | currency:'INR' }}</span>
+                  <span>{{ amountAfterTax | currency:'INR' }}</span>
                 </div>
               </mat-list-item>
             </mat-list>
