Added print for fibrePO

--- a/src/app/purchases/fibre/fibre-purchase-order/fibre-purchase-order.component.html
+++ b/src/app/purchases/fibre/fibre-purchase-order/fibre-purchase-order.component.html
@@ -142,6 +142,7 @@
       </mat-card>
    
       <div class="submit-order-btn">
-        <button mat-raised-button color="primary" (click)="submitOrder()">Submit Order</button>
+        <button mat-raised-button color="primary" class="mr-8" (click)="submitAndPrint()">Submit & Print Order</button>
+        <button mat-raised-button color="primary"(click)="submitOrder()">Submit Order</button>
       </div>   
 </section>
