--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,6 +21,10 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     margin-bottom: 24px;
 }
 
+.mr-8 {
+    margin-right: 8px;
+}
+
 // font weight
 
 .font-weight-bold {
@@ -45,4 +49,19 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     font-size: 20px;
 }
 
+
+// print
+app-print-fibre-po {
+    display: none;
+}
+
+@media print {
+    app-print-fibre-po {
+      display: block;
+    }
+  
+    app-navigation {
+      display: none;
+    }
+}
 
