--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -29,10 +29,10 @@
   <mat-sidenav #sidenav mode="side" [class.mat-elevation-z4]="true" class="app-sidenav" [opened]="navigationService.isSidenavOpened">
       <mat-nav-list>
           <h3 mat-subheader>Home</h3>
-          <mat-list-item class="mb-24" routerLink="/" (click)="onDashboard()">
-            <div class="dashboard-btn">
-                <mat-icon aria-hidden="false" aria-label="dashboard icon" fontIcon="dashboard"></mat-icon>
-                <span class="font-weight-bold">Dashboard</span>
+          <mat-list-item class="mb-24" routerLink="/">
+            <div class="home-btn">
+                <mat-icon aria-hidden="false" aria-label="home icon" fontIcon="home"></mat-icon>
+                <span class="font-weight-bold">Home</span>
             </div>
           </mat-list-item>
           <h3 *ngIf="navigationService.menu?.length" mat-subheader>Navigation</h3>
