--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -3,10 +3,14 @@
     height: 100%;
     display: flex;
     justify-content: center;
-    padding-top: 150px;
-    gap: 20px;
     background: linear-gradient(to right, rgba(225, 216, 216, 0.8), rgba(225, 217, 217, 0.8)), url("../../assets/images/textile-industry.jpg");
     background-size: cover;
+
+   .home {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    padding: 150px 20px 0 20px;
 
     .home-img {
         width: 75px;
@@ -35,4 +39,5 @@
     .line-height-lg {
         line-height: 50px;
     }
+   }
 }
