--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -22,10 +22,13 @@
    background: rgba(0, 0, 0, 0.2);
 }
 
-.home-btn {
+.home-btn, .dashboard-btn {
     display: flex;
     gap: 8px;
     align-items: center;
     padding-right: 32px;
-   
+}
+
+mat-list-item:has(.home-btn) {
+    margin: 0;
 }
