--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -28,11 +28,11 @@
 <mat-sidenav-container class="app-container">
   <mat-sidenav #sidenav mode="side" [class.mat-elevation-z4]="true" class="app-sidenav" [opened]="navigationService.isSidenavOpened">
       <mat-nav-list>
-          <h3 mat-subheader>Home</h3>
+          <h3 mat-subheader>General</h3>
           <mat-list-item class="mb-24" routerLink="/">
             <div class="home-btn">
-                <mat-icon aria-hidden="false" aria-label="info icon" fontIcon="info"></mat-icon>
-                <span class="font-weight-bold">About</span>
+                <mat-icon aria-hidden="false" aria-label="home icon" fontIcon="home"></mat-icon>
+                <span class="font-weight-bold">Home</span>
             </div>
           </mat-list-item>
           <mat-list-item class="mb-24">
