--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-color: #3f51b5; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 // Spacing
 
@@ -51,6 +51,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-
 
 
 // print
+
 app-print-fibre-po {
     display: none;
 }
