Added login page

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,9 @@
 <section class="container">
    <div class="home">
-        <div class="home-img"></div>
-        <div class="company-name">
+    <div class="home-img"></div>
+            <div class="company-name">
             <span class="line-height-lg font-size-40 letter-spacing-2 ">SREE GOMATHI AMMAN SPINNING MILLS PVT LTD</span>
-            <span class="font-size-20">GOBICETTIPALAYAM</span>
+            <span class="font-size-20">GOBICHETTIPALAYAM</span>
         </div>
    </div>
 </section>
