--- a/src/app/notification-snackbar/notification-snackbar.component.scss
+++ b/src/app/notification-snackbar/notification-snackbar.component.scss
@@ -5,13 +5,13 @@
 }
 
 .error {
-    color: #f67269;
+    color: #FF9494;
 }
 
 .warn {
-    color: #f8f83f;
+    color: #eed202;
 }
 
 .success {
-    color: #9acd32;
+    color: #4BB543;
 }
