--- a/src/app/purchases/fibre/fibre-purchase-order/print-fibre-po/print-fibre-po.component.html
+++ b/src/app/purchases/fibre/fibre-purchase-order/print-fibre-po/print-fibre-po.component.html
@@ -1,7 +1,7 @@
 <section class="print" *ngIf="printFibreService.print">
   <section id="header">
     <span>SREE GOMATHI AMMAN SPINNING MILLS PVT LTD</span>
-    <span>GOBICETTIPALAYAM</span>
+    <span>GOBICHETTIPALAYAM</span>
     <span>GSTNO : 33AAKCS5785R1ZC</span>
   </section>
   <section id="po-details">
