--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,25 +1,25 @@
-<mat-toolbar color="primary">
+<mat-toolbar color="primary" *ngIf="!appSharedService.logout">
     <button mat-icon-button (click)="toggleSidenav()" matTooltip="Menu">
         <mat-icon *ngIf="navigationService.isSidenavOpened">close</mat-icon>
         <mat-icon *ngIf="!navigationService.isSidenavOpened">menu</mat-icon>
     </button>
     <span class="ml-8 font-size-20">Menu</span>
     <div class="nav-btn py-32">
-      <button id="purchases" mat-button (click)="selectSection('purchases')">Purchases</button>
-      <button id="production" mat-button (click)="selectSection('production')">Production</button>
-      <button id="sales" mat-button (click)="selectSection('sales')">Sales</button>
+      <button id="purchases" mat-button (click)="selectSection('purchases')"><span class="font-size-16">Purchases</span></button>
+      <button id="production" mat-button (click)="selectSection('production')"><span class="font-size-16">Production</span></button>
+      <button id="sales" mat-button (click)="selectSection('sales')"><span class="font-size-16">Sales</span></button>
     </div>
     <span class="toolbar-item-spacer"></span>
-    <span class="font-weight-normal">Welcome, {{ username }}</span>
+    <span class="font-weight-normal pr-4">Welcome, {{ appSharedService.username }}</span>
     <button mat-icon-button matTooltip="My Account" [matMenuTriggerFor]="userAccountMenu">
-        <mat-icon>account_circle</mat-icon>
+        <mat-icon class="account-icon">account_circle</mat-icon>
     </button>
     <mat-menu #userAccountMenu [overlapTrigger]="false" yPosition="below">
         <button mat-menu-item routerLink="/reset-password" (click)="navigationService.removeFocus()">
             <mat-icon>person</mat-icon><span>Reset password</span>
         </button>
         <mat-divider></mat-divider>
-        <button mat-menu-item>
+        <button mat-menu-item (click)="onLogout()" routerLink="/login">
             <mat-icon>exit_to_app</mat-icon>Logout
         </button>
     </mat-menu>
@@ -28,8 +28,8 @@
 <mat-sidenav-container class="app-container">
   <mat-sidenav #sidenav mode="side" [class.mat-elevation-z4]="true" class="app-sidenav" [opened]="navigationService.isSidenavOpened">
       <mat-nav-list>
-          <h3 mat-subheader>General</h3>
-          <mat-list-item class="mb-24" routerLink="/">
+          <h3 mat-subheader class="pt-16">General</h3>
+          <mat-list-item class="mb-24" routerLink="/home">
             <div class="home-btn">
                 <mat-icon aria-hidden="false" aria-label="home icon" fontIcon="home"></mat-icon>
                 <span class="font-weight-bold">Home</span>
