--- a/src/app/purchases/fibre/fibre-purchase-order/fibre-purchase-order.component.html
+++ b/src/app/purchases/fibre/fibre-purchase-order/fibre-purchase-order.component.html
@@ -142,7 +142,8 @@
       </mat-card>
    
       <div class="submit-order-btn">
-        <button mat-raised-button color="primary" class="mr-8" (click)="submitAndPrint()">Submit & Print Order</button>
+        <button mat-raised-button color="primary" class="mr-16" (click)="resetData()">Reset</button>
+        <button mat-raised-button color="primary" class="mr-16" (click)="submitAndPrint()">Submit & Print Order</button>
         <button mat-raised-button color="primary"(click)="submitOrder()">Submit Order</button>
       </div>   
 </section>
