--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary" *ngIf="!appSharedService.logout">
+<mat-toolbar class="tool-bar mat-elevation-z4" color="primary" *ngIf="!appSharedService.logout">
     <button mat-icon-button (click)="toggleSidenav()" matTooltip="Menu">
         <mat-icon *ngIf="navigationService.isSidenavOpened">close</mat-icon>
         <mat-icon *ngIf="!navigationService.isSidenavOpened">menu</mat-icon>
@@ -26,7 +26,7 @@
 </mat-toolbar>
   
 <mat-sidenav-container class="app-container">
-  <mat-sidenav #sidenav mode="side" [class.mat-elevation-z4]="true" class="app-sidenav" [opened]="navigationService.isSidenavOpened">
+  <mat-sidenav #sidenav mode="side" class="app-sidenav mat-elevation-z4" [opened]="navigationService.isSidenavOpened">
       <mat-nav-list>
           <h3 mat-subheader class="pt-16">General</h3>
           <mat-list-item class="mb-24" routerLink="/home">
