--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,10 @@
-<app-navigation>
-  <router-outlet></router-outlet>
-</app-navigation>
+<app-tool-bar [sidenav]="sidenav"></app-tool-bar>
+<mat-sidenav-container class="app-container">
+    <mat-sidenav #sidenav mode="side" class="app-sidenav mat-elevation-z4" [opened]="navigationService.isSidenavOpened">
+      <app-side-menu ></app-side-menu>
+    </mat-sidenav>
+    <mat-sidenav-content class="sidenav-content">
+      <router-outlet></router-outlet>
+    </mat-sidenav-content>
+</mat-sidenav-container>
 <app-print-fibre-po></app-print-fibre-po>
