--- a/src/app/purchases/fibre/fibre-purchase-order/fibre-purchase-order.component.scss
+++ b/src/app/purchases/fibre/fibre-purchase-order/fibre-purchase-order.component.scss
@@ -46,7 +46,7 @@ mat-form-field {
 }
 
 .submit-order-btn {
-    margin-top: 32px;
+    margin-top: 40px;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
 }
