--- a/src/app/purchases/fibre/fibre-receive-purchase-order/fibre-receive-purchase-order.component.html
+++ b/src/app/purchases/fibre/fibre-receive-purchase-order/fibre-receive-purchase-order.component.html
@@ -176,7 +176,7 @@
         </mat-card>
      
         <div class="submit-order-btn">
-          <button mat-raised-button color="primary" class="mr-16" (click)="resetData()">Reset</button>
+          <button mat-raised-button class="mr-16" (click)="resetData()"><mat-icon>refresh</mat-icon>Reset</button>
           <button mat-raised-button color="primary" (click)="submitOrder()">Submit Order</button>
         </div>   
   </section>
