--- a/src/app/purchases/fibre/fibre-receive-purchase-order/fibre-receive-purchase-order.component.scss
+++ b/src/app/purchases/fibre/fibre-receive-purchase-order/fibre-receive-purchase-order.component.scss
@@ -9,7 +9,8 @@
 .form-container {
     padding: 32px;
     display: flex;
-    gap: 48px;
+    column-gap: 48px;
+    row-gap: 24px;
     flex-wrap: wrap;
     align-items: center;
 }
@@ -48,7 +49,7 @@ mat-form-field {
 }
 
 .submit-order-btn {
-    margin-top: 32px;
+    margin-top: 40px;
     display: flex;
     justify-content: flex-end;
 }
