--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,11 @@
 .app-container {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+.sidenav-container {
     height: 100%;
     margin: 0;
     
