font-weight update

--- a/src/app/purchases/fibre/fibre-receive-purchase-order/fibre-receive-purchase-order.component.html
+++ b/src/app/purchases/fibre/fibre-receive-purchase-order/fibre-receive-purchase-order.component.html
@@ -1,5 +1,5 @@
 <section class="container">
-    <h1 class="header">Fibre receive purchase order</h1>
+    <h1 class="header font-weight-800">Fibre receive purchase order</h1>
     <mat-card class="party-card">
       <mat-card-header>
         <mat-card-title>Invoice details</mat-card-title>
@@ -177,6 +177,6 @@
      
         <div class="submit-order-btn">
           <button mat-raised-button class="mr-16" (click)="resetData()"><mat-icon>refresh</mat-icon>Reset</button>
-          <button mat-raised-button color="primary" (click)="submitOrder()">Submit Order</button>
+          <button mat-raised-button color="primary" (click)="submitOrder()"><mat-icon>save_alt</mat-icon>Submit</button>
         </div>   
   </section>
