--- a/src/app/purchases/fibre/fibre-purchase-order/fibre-purchase-order.component.html
+++ b/src/app/purchases/fibre/fibre-purchase-order/fibre-purchase-order.component.html
@@ -151,7 +151,7 @@
         </div>
         <div>
           <button mat-raised-button class="mr-16" (click)="resetData()"><mat-icon>refresh</mat-icon>Reset</button>
-          <button mat-raised-button color="primary"(click)="submitOrder()">Submit Order</button>
+          <button mat-raised-button color="primary"(click)="submitOrder()"><mat-icon>save_alt</mat-icon>Submit</button>
         </div>
       </div>   
 </section>
