--- a/src/app/purchases/fibre/fibre-receive-purchase-order/fibre-receive-purchase-order.component.scss
+++ b/src/app/purchases/fibre/fibre-receive-purchase-order/fibre-receive-purchase-order.component.scss
@@ -1,5 +1,5 @@
 .container {
-    margin: 24px;
+    margin: 32px;
 }
 
 .header {
@@ -21,7 +21,7 @@
 
 
 h1 {
-    margin: 48px 0;
+    margin: 32px 0;
 }
 
 
@@ -56,4 +56,5 @@ mat-form-field {
     margin-top: 40px;
     display: flex;
     justify-content: flex-end;
+    align-items: center;
 }
