--- a/src/app/purchases/fibre/fibre-receive-purchase-order/fibre-receive-purchase-order.component.html
+++ b/src/app/purchases/fibre/fibre-receive-purchase-order/fibre-receive-purchase-order.component.html
@@ -6,12 +6,12 @@
       </mat-card-header>
         <mat-card-content>
             <form class="form-container" [formGroup]="form">
-                <mat-form-field appearance="fill">
+                <mat-form-field appearance="fill" class="w-15">
                   <mat-label>PONo</mat-label>
                   <input matInput formControlName="poNo">
                 </mat-form-field>
               
-                <mat-form-field appearance="fill">
+                <mat-form-field appearance="fill" class="w-40">
                   <mat-label>Party</mat-label>
                   <mat-select formControlName="party">
                     <mat-option value="option">party 1</mat-option>
@@ -21,25 +21,25 @@
                   <mat-error>This field is required.</mat-error>
                 </mat-form-field>
     
-                <mat-form-field appearance="fill">
+                <mat-form-field appearance="fill" class="w-15">
                     <mat-label>Received Date</mat-label>
                     <input matInput [matDatepicker]="poDatePicker" formControlName="poDate">
-                    <mat-hint>MM/DD/YYYY</mat-hint>
+                    <mat-hint>DD/MM/YYYY</mat-hint>
                     <mat-datepicker-toggle matIconSuffix [for]="poDatePicker"></mat-datepicker-toggle>
                     <mat-datepicker #poDatePicker></mat-datepicker>
                     <mat-error>This field is required.</mat-error>
                 </mat-form-field>
 
-                <mat-form-field appearance="fill">
+                <mat-form-field appearance="fill" class="w-25">
                     <mat-label>Invoice No</mat-label>
                     <input matInput formControlName="invoiceNo">
                     <mat-error>This field is required.</mat-error>
                   </mat-form-field>
 
-                <mat-form-field appearance="fill">
+                <mat-form-field appearance="fill" class="w-15">
                     <mat-label>Invoice Date</mat-label>
                     <input matInput [matDatepicker]="invoiceDatePicker" formControlName="invoiceDate">
-                    <mat-hint>MM/DD/YYYY</mat-hint>
+                    <mat-hint>DD/MM/YYYY</mat-hint>
                     <mat-datepicker-toggle matIconSuffix [for]="invoiceDatePicker"></mat-datepicker-toggle>
                     <mat-datepicker #invoiceDatePicker></mat-datepicker>
                     <mat-error>This field is required.</mat-error>
@@ -50,44 +50,11 @@
     
       <div class="button-container">
         <button mat-raised-button (click)="addData()" class="button">
-          Add order
-        </button>
-        <button
-          mat-raised-button
-          [disabled]="!dataSource.length"
-          (click)="updateData()"
-          class="button">
-          Update order
-        </button>
-        <button
-          mat-raised-button
-          [disabled]="!dataSource.length"
-          (click)="removeData()"
-          class="button">
-          Remove order
+          Add item
         </button>
       </div>
       
       <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 table">
-        <ng-container matColumnDef="select">
-          <th mat-header-cell *matHeaderCellDef>
-            <mat-checkbox (change)="$event ? toggleAllRows() : null"
-                          [checked]="selection.hasValue() && isAllSelected()"
-                          [indeterminate]="selection.hasValue() && !isAllSelected()"
-                          [disabled]="dataSource.length ? null : true"
-                          [aria-label]="checkboxLabel()">
-            </mat-checkbox>
-          </th>
-          <td mat-cell *matCellDef="let row">
-            <mat-checkbox (click)="$event.stopPropagation()"
-                          (change)="$event ? selection.toggle(row) : null"
-                          [checked]="selection.isSelected(row)"
-                          [aria-label]="checkboxLabel(row)">
-            </mat-checkbox>
-          </td>
-          <td mat-footer-cell *matFooterCellDef></td>
-        </ng-container>
-  
         <ng-container matColumnDef="fibre">
           <th mat-header-cell *matHeaderCellDef>Fibre</th>
           <td mat-cell *matCellDef="let element">{{ element.fibre }}</td>
@@ -131,28 +98,43 @@
         </ng-container>
       
         <ng-container matColumnDef="rate">
-          <th mat-header-cell *matHeaderCellDef>Rate</th>
-          <td mat-cell *matCellDef="let element">{{ element.rate | currency:'INR' }}</td>
+          <th mat-header-cell *matHeaderCellDef class="text-right">Rate</th>
+          <td mat-cell *matCellDef="let element" class="text-right">{{ element.rate | currency:'INR' }}</td>
           <td mat-footer-cell *matFooterCellDef></td>
         </ng-container>
       
         <ng-container matColumnDef="amount">
-          <th mat-header-cell *matHeaderCellDef>Amount</th>
-          <td mat-cell *matCellDef="let element">{{ element.amount | currency:'INR' }}</td>
-          <td mat-footer-cell *matFooterCellDef>{{ getAmount() | currency: 'INR' }}</td>
+          <th mat-header-cell *matHeaderCellDef class="text-right">Amount</th>
+          <td mat-cell *matCellDef="let element" class="text-right">{{ element.amount | currency:'INR' }}</td>
+          <td mat-footer-cell *matFooterCellDef class="text-right">{{ getAmount() | currency: 'INR' }}</td>
         </ng-container>
   
         <ng-container matColumnDef="gst">
-          <th mat-header-cell *matHeaderCellDef>GST%</th>
-          <td mat-cell *matCellDef="let element">{{ element.gst | number: '1.2-2' }}%</td>
-          <td mat-footer-cell *matFooterCellDef>{{ getTaxAmount() | currency: 'INR' }}</td>
+          <th mat-header-cell *matHeaderCellDef class="text-right">GST%</th>
+          <td mat-cell *matCellDef="let element" class="text-right">{{ element.gst | number: '1.2-2' }}%</td>
+          <td mat-footer-cell *matFooterCellDef class="text-right">{{ getTaxAmount() | currency: 'INR' }}</td>
         </ng-container>
   
         <ng-container matColumnDef="totalAmount">
-          <th mat-header-cell *matHeaderCellDef>Total Amount</th>
-          <td mat-cell *matCellDef="let element">{{ element.totalAmount | currency:'INR' }}</td>
-          <td mat-footer-cell *matFooterCellDef>{{ getTotalAmount() | currency: 'INR' }}</td>
+          <th mat-header-cell *matHeaderCellDef class="text-right">Total Amount</th>
+          <td mat-cell *matCellDef="let element" class="text-right">{{ element.totalAmount | currency:'INR' }}</td>
+          <td mat-footer-cell *matFooterCellDef class="text-right">{{ getTotalAmount() | currency: 'INR' }}</td>
         </ng-container>
+
+        <ng-container matColumnDef="button">
+          <th mat-header-cell *matHeaderCellDef class="text-center">Actions</th>
+          <td mat-cell *matCellDef="let element" class="text-center">
+              <button mat-icon-button color="basic" aria-label="button with a edit icon"
+                  (click)="updateData(element)" matTooltip="Edit User">
+                  <mat-icon>edit</mat-icon>
+              </button>
+              <button mat-icon-button color="warn" (click)="removeData(element)"
+                  aria-label="button with a delete icon" matTooltip="Delete User">
+                  <mat-icon>delete</mat-icon>
+              </button>
+          </td>
+          <td mat-footer-cell *matFooterCellDef></td>
+      </ng-container>
       
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
