--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,41 @@
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-color: #fafafa; }
 
+// print
+
+app-print-fibre-po {
+    display: none;
+}
+
+@media print {
+    app-print-fibre-po {
+      display: block;
+    }
+
+    #app-container {
+      display: none;
+    }
+}
+
+
+// size 
+
+.w-15 {
+    width: 15%;
+}
+
+.w-25 {
+    width: 25%;
+}
+
+.w-40 {
+    width: 40%
+}
+
+.w-50 {
+    width: 50%
+}
+
 // Spacing
 
 // letter spacing
@@ -27,6 +62,10 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-
 }
 
 // margin
+
+.ml-8 {
+    margin-left: 8px;
+}
 
 .ml-16 {
     margin-left: 8px;
@@ -77,19 +116,17 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-
 }
 
 
-// print
+// text align
 
-app-print-fibre-po {
-    display: none;
+.text-right {
+    text-align: right !important;
 }
 
-@media print {
-    app-print-fibre-po {
-      display: block;
-    }
+.text-center {
+    text-align: center !important;
+}
 
-    #app-container {
-      display: none;
-    }
+.text-left {
+    text-align: left !important;
 }
 
