Added success banner

--- a/src/app/purchases/fibre/fibre-receive-purchase-order/fibre-receive-purchase-order.component.html
+++ b/src/app/purchases/fibre/fibre-receive-purchase-order/fibre-receive-purchase-order.component.html
@@ -50,7 +50,7 @@
     
       <div class="button-container">
         <button mat-raised-button (click)="addData()" class="button">
-          Add item
+          <mat-icon>add_circle_outline</mat-icon>Add item
         </button>
       </div>
       
