--- a/src/app/user-action-confirmation/user-action-confirmation.component.html
+++ b/src/app/user-action-confirmation/user-action-confirmation.component.html
@@ -1,7 +1,7 @@
 <section class="container">
     <h1 mat-dialog-title>Are you sure?</h1>
     <div mat-dialog-actions class="footer">
-        <button mat-flat-button color="primary" (click)="selectYes()">Yes</button>
-        <button mat-stroked-button (click)="selectNo()">No</button>
+        <button mat-raised-button color="primary" (click)="selectYes()">Yes</button>
+        <button mat-button (click)="selectNo()">No</button>
     </div>
 </section>
