--- a/src/app/purchases/fibre/fibre-purchase-order/fibre-purchase-order.component.html
+++ b/src/app/purchases/fibre/fibre-purchase-order/fibre-purchase-order.component.html
@@ -35,7 +35,7 @@
   
     <div class="button-container">
       <button mat-raised-button (click)="addData()" class="button">
-        Add item
+        <mat-icon>add_circle_outline</mat-icon>Add item
       </button>
     </div>
     
@@ -85,13 +85,13 @@
       <ng-container matColumnDef="button">
         <th mat-header-cell *matHeaderCellDef class="text-center">Actions</th>
         <td mat-cell *matCellDef="let element" class="text-center">
-            <button mat-icon-button color="basic" aria-label="button with a edit icon"
+            <button mat-icon-button color="primary" aria-label="button with a edit icon"
                 (click)="updateData(element)" matTooltip="Edit User">
                 <mat-icon>edit</mat-icon>
             </button>
-            <button mat-icon-button color="warn" (click)="removeData(element)"
+            <button mat-icon-button color="primary" (click)="removeData(element)"
                 aria-label="button with a delete icon" matTooltip="Delete User">
-                <mat-icon>delete</mat-icon>
+                <mat-icon>delete_forever</mat-icon>
             </button>
         </td>
         <td mat-footer-cell *matFooterCellDef></td>
@@ -106,4 +106,17 @@
         <button mat-raised-button class="mr-16" (click)="resetData()"><mat-icon>refresh</mat-icon>Reset</button>
         <button mat-raised-button color="primary"(click)="submitOrder()"><mat-icon>save_alt</mat-icon>Submit</button>
     </div>   
+</section>
+
+<section class="success-banner" *ngIf="successBanner">
+  <span>
+    <div class="green-tick"></div>
+    Purchase order submitted successfully!
+  </span>
+  <button mat-icon-button matTooltip="Print Fibre PO bill" (click)="printBill()">
+      <mat-icon>print</mat-icon>
+  </button>
+  <button mat-icon-button class="ml-24" (click)="closeSuccessBanner()">
+    <mat-icon>close</mat-icon>
+</button>
 </section>
