--- a/src/app/purchases/fibre/fibre-purchase-order/fibre-purchase-order.component.scss
+++ b/src/app/purchases/fibre/fibre-purchase-order/fibre-purchase-order.component.scss
@@ -50,3 +50,32 @@ h1 {
     justify-content: flex-end;
     align-items: center;
 }
+
+.success-banner {
+    padding: 8px 4px 8px 32px;
+    display: flex;
+    align-items: center;
+    gap: 4px;
+    position: absolute;
+    top: 0;
+    right: 50%;
+    background-color: rgba(17, 244, 17, 0.15);
+    transform: translateX(50%);
+    border-radius: 5px;
+    box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
+
+    & span {
+        font-size: 18px;
+        font-weight: 500;
+        display: flex;
+        align-items: center;
+        gap: 16px;
+    }
+
+    .green-tick {
+        width: 30px;
+        height: 30px;
+        background-image: url('../../../../assets/images/green-tick.png');
+        background-size: cover;
+    }
+}
