--- a/src/app/purchases/fibre/fibre-receive-purchase-order/fibre-receive-purchase-order.component.html
+++ b/src/app/purchases/fibre/fibre-receive-purchase-order/fibre-receive-purchase-order.component.html
@@ -130,7 +130,7 @@
               </button>
               <button mat-icon-button color="warn" (click)="removeData(element)"
                   aria-label="button with a delete icon" matTooltip="Delete User">
-                  <mat-icon>delete</mat-icon>
+                  <mat-icon>delete_forever</mat-icon>
               </button>
           </td>
           <td mat-footer-cell *matFooterCellDef></td>
@@ -146,3 +146,19 @@
           <button mat-raised-button color="primary" (click)="submitOrder()"><mat-icon>save_alt</mat-icon>Submit</button>
         </div>   
   </section>
+
+  <section class="success-banner" *ngIf="successBanner">
+    <div class="banner-header">
+      <button mat-icon-button class="close-button" (click)="closeSuccessBanner()">
+        <mat-icon>close</mat-icon>
+      </button>
+      <div class="green-tick"></div>
+    </div>
+    <div class="banner-content">
+      <div class="font-size-28 letter-spacing-1">Success!</div>
+      <div class="font-size-16">Invoice againt purchase order submitted successfully.</div>
+    </div>
+  </section>
+  
+  <div class="overlay" *ngIf="successBanner"></div>
+  
