--- a/src/app/purchases/fibre/fibre-purchase-order/fibre-purchase-order.component.html
+++ b/src/app/purchases/fibre/fibre-purchase-order/fibre-purchase-order.component.html
@@ -85,11 +85,11 @@
       <ng-container matColumnDef="button">
         <th mat-header-cell *matHeaderCellDef class="text-center">Actions</th>
         <td mat-cell *matCellDef="let element" class="text-center">
-            <button mat-icon-button color="primary" aria-label="button with a edit icon"
+            <button mat-icon-button color="basic" aria-label="button with a edit icon"
                 (click)="updateData(element)" matTooltip="Edit User">
                 <mat-icon>edit</mat-icon>
             </button>
-            <button mat-icon-button color="primary" (click)="removeData(element)"
+            <button mat-icon-button color="warn" (click)="removeData(element)"
                 aria-label="button with a delete icon" matTooltip="Delete User">
                 <mat-icon>delete_forever</mat-icon>
             </button>
@@ -109,16 +109,19 @@
 </section>
 
 <section class="success-banner" *ngIf="successBanner">
-  <span>
+  <div class="banner-header">
+    <button mat-icon-button class="close-button" (click)="closeSuccessBanner()">
+      <mat-icon>close</mat-icon>
+    </button>
     <div class="green-tick"></div>
-    Purchase order submitted successfully!
-  </span>
-  <button mat-icon-button matTooltip="Print Fibre PO bill" (click)="printBill()">
-      <mat-icon>print</mat-icon>
-  </button>
-  <button mat-icon-button class="ml-24" (click)="closeSuccessBanner()">
-    <mat-icon>close</mat-icon>
-</button>
+  </div>
+  <div class="banner-content">
+    <div class="font-size-28 letter-spacing-1">Success!</div>
+    <div class="font-size-16">Purchase order submitted successfully.</div>
+    <button mat-raised-button color="accent" (click)="printBill()">
+      <mat-icon>print</mat-icon>Print bill
+    </button>
+  </div>
 </section>
 
 <div class="overlay" *ngIf="successBanner"></div>
