--- a/src/app/tool-bar/tool-bar.component.scss
+++ b/src/app/tool-bar/tool-bar.component.scss
@@ -13,6 +13,10 @@
     button:not(:last-child) {
         margin-right: 24px;;
     }
+
+    & button:hover {
+        background-color: rgba(0, 0, 0, 0.2);
+    }
 }
 
 .item-selected {
