--- a/src/styles.scss
+++ b/src/styles.scss
@@ -42,6 +42,11 @@ app-print-fibre-po {
 
 // letter spacing
 
+.letter-spacing-1 {
+    letter-spacing: 1.5px;
+}
+
+
 .letter-spacing-2 {
     letter-spacing: 2px;
 }
@@ -113,6 +118,10 @@ app-print-fibre-po {
 
 .font-size-24 {
     font-size: 24px;
+}
+
+.font-size-28 {
+    font-size: 28px;
 }
 
 
