--- a/src/app/components/purchases/fibre/fibre-purchase-order/order-details-dialog/order-details-dialog.component.html
+++ b/src/app/components/purchases/fibre/fibre-purchase-order/order-details-dialog/order-details-dialog.component.html
@@ -19,7 +19,7 @@
         </div>
         <div class="flex-container">
             <mat-form-field appearance="fill">
-                <mat-label>KGS</mat-label>
+                <mat-label>KGs</mat-label>
                 <input type="number" min="1" matInput formControlName="weight">
                 <mat-error>This field is required.</mat-error>
             </mat-form-field>
