--- a/src/app/components/purchases/fibre/fibre-purchase-order/fibre-purchase-order.component.html
+++ b/src/app/components/purchases/fibre/fibre-purchase-order/fibre-purchase-order.component.html
@@ -47,7 +47,7 @@
       </ng-container>
 
       <ng-container matColumnDef="shadeName">
-        <th mat-header-cell *matHeaderCellDef>Shade Name</th>
+        <th mat-header-cell *matHeaderCellDef>Shade</th>
         <td mat-cell *matCellDef="let element">{{ element.shadeName }}</td>
         <td mat-footer-cell *matFooterCellDef></td>
       </ng-container>
