Added session timeout

--- a/src/app/components/tool-bar/tool-bar.component.html
+++ b/src/app/components/tool-bar/tool-bar.component.html
@@ -19,7 +19,7 @@
             <mat-icon>person</mat-icon><span>Reset password</span>
         </button>
         <mat-divider></mat-divider>
-        <button mat-menu-item (click)="onLogout()" routerLink="/login">
+        <button mat-menu-item (click)="onLogout()">
             <mat-icon>exit_to_app</mat-icon>Logout
         </button>
     </mat-menu>
