Added forgot password functionality

--- a/src/app/components/change-password/change-password.component.html
+++ b/src/app/components/change-password/change-password.component.html
@@ -1,7 +1,7 @@
-<section class="container" *ngIf="id">
+<section class="container">
     <mat-card class="card">
        <mat-card-header>
-            <mat-card-title>Reset your password</mat-card-title>
+            <mat-card-title>Change your password</mat-card-title>
        </mat-card-header>
         <mat-card-content>
             <form class="form" [formGroup]="form">
@@ -26,30 +26,7 @@
             </form>
         </mat-card-content>
         <mat-card-actions>
-            <button mat-raised-button color="primary" (click)="onReset()">Reset</button>
+            <button mat-raised-button color="primary" (click)="onUpdate()">Update</button>
         </mat-card-actions>
     </mat-card>
-</section>
-
-<section class="container" *ngIf="!id">
-    <mat-card class="card">
-        <mat-card-header>
-             <mat-card-title>Forgot password</mat-card-title>
-        </mat-card-header>
-         <mat-card-content>
-            <p class="pt-24">Enter you email address associated with your account and we'll send you link to reset your password.</p>
-             <form class="form" [formGroup]="form">
-                 <mat-form-field>
-                     <mat-label>Email</mat-label>
-                     <input matInput type="email" formControlName="email">
-                     <mat-error *ngIf="email?.hasError('required')">This is a required field.</mat-error>
-                     <mat-error *ngIf="email?.hasError('pattern')">Please enter valid email.</mat-error>
-                 </mat-form-field>
-             </form>
-         </mat-card-content>
-         <mat-card-actions>
-             <button mat-raised-button color="primary" (click)="onSubmit()">Submit</button>
-             <button mat-button color="primary" (click)="backToLogin()"><mat-icon>arrow_back</mat-icon> Back to login</button>
-         </mat-card-actions>
-     </mat-card>
 </section>
