--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -22,6 +22,7 @@
              <mat-error *ngIf="password?.hasError('required')">This is a required field.</mat-error>
          </mat-form-field>
          <button mat-raised-button color="primary" (click)="submit()">Login</button>
+         <button mat-button color="primary" (click)="forgotPassword()"><span class="font-size-14">Forgot password?</span></button>
      </form>
     </div>
     <div class="right"></div>
