--- a/src/app/components/change-password/change-password.component.scss
+++ b/src/app/components/change-password/change-password.component.scss
@@ -11,7 +11,7 @@
 }
 
 .form {
-    padding: 32px 0 16px 0;
+    padding: 32px 0;
     display: flex;
     flex-direction: column;
     gap: 32px;
@@ -20,9 +20,6 @@
 mat-card-actions {
     display: flex;
     justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    gap: 24px;
 }
 
 .password-error {
