--- a/src/app/components/tool-bar/tool-bar.component.html
+++ b/src/app/components/tool-bar/tool-bar.component.html
@@ -15,8 +15,8 @@
         <mat-icon class="account-icon">account_circle</mat-icon>
     </button>
     <mat-menu #userAccountMenu [overlapTrigger]="false" yPosition="below">
-        <button mat-menu-item routerLink="/reset-password" (click)="navigationService.removeFocus()">
-            <mat-icon>person</mat-icon><span>Reset password</span>
+        <button mat-menu-item routerLink="/change-password" (click)="navigationService.removeFocus()">
+            <mat-icon>person</mat-icon><span>Change password</span>
         </button>
         <mat-divider></mat-divider>
         <button mat-menu-item (click)="onLogout()">
